[package]
name = "encrypted-file-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
futures = "0.3.31"
headers = "0.4.1"
rand = "0.9.2"
# sha2 = "0.10.8"
tokio = { version = "1.47.1", features = ["full"] }

[dev-dependencies]
tempfile = "3.23.0"
